<resources>
    <string name="app_name">Little Reminders</string>
    <string name="login">Email:</string>
    <string name="abc123_yahoo_com">abc123@yahoo.com</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="pass">*********</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="textview">TextView</string>
    <string name="add">Add</string>
    <string name="body">Body</string>
    <string name="title">Title</string>
    <string name="create_a_notification">Create A Notification</string>
    <string name="date_start">Date Start</string>
    <string name="date_end">Date End</string>
    <string name="of_reminders"># of Reminders</string>
    <string name="_5">5</string>
    <string name="how_many_times_would_you_like_to_be_remined">How many times would you like to be remined? (Max: 50)</string>
    <string name="how_many_times_per_day_would_you_like_to_get_reminded_1_2_or_3">How many times per day would you like to get reminded? (1,2, or 3,)</string>
    <string name="_1_2_or_3">1,2, or 3</string>
    <string name="_2">2</string>
    <string name="test">test</string>
    <string name="alarm_set">Alarm Set!</string>
    <string name="funny">funny</string>
    <string name="start_alarm">Start Alarm</string>
    <string name="no_data_found">NO DATA FOUND</string>
</resources>
