<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cs316.project_1.littlereminders.HomePage">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="381dp"
        android:layout_height="173dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/heading" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="147dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.326"
        app:srcCompat="@color/white" />

    <EditText
        android:id="@+id/emailData"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/abc123_yahoo_com"
        android:inputType="textEmailAddress|textPersonName"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/passdata2"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toEndOf="@+id/email"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <EditText
        android:id="@+id/passdata2"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textEmailAddress|textPersonName"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4" />

    <TextView
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/password"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView4" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/login"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/Email"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <Button
        android:id="@+id/signin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/common_google_signin_btn_text_dark_pressed"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signup"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/common_google_signin_btn_text_dark_pressed"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.728"
        app:layout_constraintStart_toEndOf="@+id/signin" />

</android.support.constraint.ConstraintLayout>
