<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addNotification"
    tools:layout_editor_absoluteY="25dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="900dp"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:titleTextColor="@color/black" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="26dp"
                android:text="@string/create_a_notification"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/addTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <EditText
                android:id="@+id/addTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/title"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/addText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                android:id="@+id/addText"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_marginBottom="24dp"
                android:ems="10"
                android:hint="@string/body"
                android:inputType="textMultiLine"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/dateEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addTitle" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="20dp"
                android:text="@string/how_many_times_would_you_like_to_be_remined"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/add1"
                app:layout_constraintEnd_toStartOf="@+id/amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateEnd" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:layout_marginRight="150dp"
                android:ems="10"
                android:hint="@string/_5"
                android:inputType="number"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/add1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/dateEnd" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginTop="20dp"
                android:text="@string/how_many_times_per_day_would_you_like_to_get_reminded_1_2_or_3"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/add1"
                app:layout_constraintEnd_toStartOf="@+id/amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateEnd" />

            <EditText
                android:id="@+id/tpd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:layout_marginRight="150dp"
                android:ems="10"
                android:hint="@string/_2"
                android:inputType="number"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/add1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/dateEnd" />

            <Button
                android:id="@+id/add1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="150dp"
                android:layout_marginRight="150dp"
                android:layout_marginTop="25dp"
                android:text="@string/add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/amount"
                app:layout_constraintStart_toStartOf="@+id/amount"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>